<resources>
    <string name="app_name">TripApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_maps">Map</string>

    <string name="facebook_app_id">350743785380244</string>
    <string name="fb_login_protocol_scheme">67e256c41bc38a44a40898127517a3dc</string>

    <string name="copy_right">Copyrights © %1$d</string>

    <string name="ADD_USER_SUCC">add data success!</string>
    <string name="ADD_USER_FAIL">add data failed</string>
    <string name="GET_USER_SUCC">got user data!</string>
    <string name="GET_USER_FAIL">user not found</string>
    <string name="SIGN_UP_CANCEL">sign up canceled</string>
    <string name="ADD_TRIP_SUCC">trip added successfuly!</string>
    <string name="user">user</string>
    <string name="close">Close</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="destination">Destination</string>
    <string name="origin">Origin</string>
    <string name="price">Price</string>
    <string name="reserve_seat">Reserve seat</string>
    <string name="seats_available">Seats available</string>
    <string name="phone"></string>
    <string name="message"></string>

    <string-array name="values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
</resources>
